log
Mon 04 Sep 2023 06:39:16 PM UTC: 
 tests:  0|6
total_score: 0/70
036b192
Tue 05 Sep 2023 05:53:46 PM UTC: 
 hashmap.c | 50 +++++++++++++++++---------------------------------
 1 file changed, 17 insertions(+), 33 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:50:14: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   50 |   mapa->size = NULL;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
0f9b66a
Tue 05 Sep 2023 05:54:15 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6890104
Tue 05 Sep 2023 06:01:14 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:52:9: error: ‘*mapa.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   52 |     mapa->buckets[i] = NULL;
      |     ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
227cbf7
Tue 05 Sep 2023 06:03:04 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:53:9: error: ‘*mapa.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   53 |     mapa->buckets[i] = NULL;
      |     ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1f76d62
Tue 05 Sep 2023 06:07:09 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2802993
Tue 05 Sep 2023 06:25:34 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
a0b7628
Tue 05 Sep 2023 06:29:06 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
884c937
Tue 05 Sep 2023 06:35:50 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
e9d3fe3
Tue 05 Sep 2023 06:36:28 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|5
total_score: 20/70
9fd2012
Tue 05 Sep 2023 06:44:47 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 30/70
f518082
Tue 05 Sep 2023 06:56:35 PM UTC: 
 hashmap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
17ab45c
Tue 05 Sep 2023 07:01:15 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
70f045d
Tue 05 Sep 2023 07:04:25 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 30/70
adeb550
Tue 05 Sep 2023 07:05:22 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
ed331e5
Tue 05 Sep 2023 07:07:36 PM UTC: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:79:9: error: unused variable ‘foundPair’ [-Werror=unused-variable]
   79 |   Pair *foundPair = malloc(sizeof(Pair));
      |         ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c19b74e
Tue 05 Sep 2023 07:07:48 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5b42b79
Tue 05 Sep 2023 07:10:30 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b02de20
Tue 05 Sep 2023 07:14:21 PM UTC: 
 hashmap.c | 14 +++++---------
 1 file changed, 5 insertions(+), 9 deletions(-)
 tests:  6|4
total_score: 30/70
4dd71db
Tue 05 Sep 2023 07:15:50 PM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
bdb0549
Tue 05 Sep 2023 07:20:59 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
test.c: In function ‘searchMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
test.c:512: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2b36c1d
Tue 05 Sep 2023 07:21:48 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
4a23138
Tue 05 Sep 2023 07:26:40 PM UTC: 
 hashmap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  0|0
6232c6a
Tue 05 Sep 2023 07:34:34 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
232600d
Tue 05 Sep 2023 07:35:19 PM UTC: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|0
88c9674
Tue 05 Sep 2023 07:36:55 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f52eeab
Tue 05 Sep 2023 07:39:49 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
14c9c24
Tue 05 Sep 2023 07:54:38 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
fdf9a96
Wed 06 Sep 2023 02:31:14 PM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
fe2aef4
